# Distracted-Drivers

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  adapter_retraining.ipynb  efficientnet.ipynb  finetuning.ipynb  finetuning.py  install_windows.bat  pyproject.toml  requirements.txt  run.bat  run_image_classification.py
data/: efficientnet_embeddings.parquet
data/mlruns/0/23057eb022344d8eb097a6a8ce1522eb/: meta.yaml
data/mlruns/0/23057eb022344d8eb097a6a8ce1522eb/metrics/: train loss  val accuracy  val loss
data/mlruns/0/23057eb022344d8eb097a6a8ce1522eb/tags/: mlflow.log-model.history  mlflow.runName
data/mlruns/0/27d2f141a6b8468a821d78a4eebf9f84/: meta.yaml
data/mlruns/0/27d2f141a6b8468a821d78a4eebf9f84/metrics/: train loss  val loss
data/mlruns/0/27d2f141a6b8468a821d78a4eebf9f84/tags/: mlflow.log-model.history  (+2 more)
data/mlruns/0/28c975e8801e45e588870a66cb377616/: meta.yaml
data/mlruns/0/a049718d20184dc58e7aac99985a0afb/: meta.yaml
data/mlruns/0/aa246d9d2106472492442ff362b1b143/: meta.yaml
data/mlruns/0/bbf79088754b430fa9c8515fd7020eae/: meta.yaml
jobs/: install.job
mlruns/0/: meta.yaml
src/distracted/: __init__.py  adapters.py  baseline.py  classifiers.py  data_util.py  dataset_loader.py  efficientnet_embeddings.py  experimental_setups.py  final_metrics.py  full_finetune.py  gradcam.py  hyperparameters.json  hyperparameters_2.json  hyperparameters_3.json  id2label.py  image_segmentation.py  image_segmentation_visualisation.py  layer_modification.py  scheduler.py  segmentation.py  segmentation_nn.py  submit.py  visualization.py
(+45 files in other folders)
