[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distracted"
version = "0.0.1"
requires-python = ">3.10.0"

dependencies = [
    "timm",
    "mlflow",
    "click",
    "transformers",
    "seaborn",
	"mirror @ git+https://github.com/FrancescoSaverioZuppichini/mirror.git"
]

[tool.setuptools.packages.find]
where = ["src"]